<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dua"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_400"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.csi.los.Activity.ActivityBorrowerInfo">

    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_background"
        android:fitsSystemWindows="true"
        android:scrollbarSize="3.5dp"
        android:layout_below="@+id/toolbar"
        android:scrollbarThumbVertical="@color/md_blue_400">

    <LinearLayout
        android:id="@+id/linearLoanPersonalinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin">
      <!--personal email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/email_icon" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextPersonalEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/personalEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--office email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/email_icon" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextOfficeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/officeEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--personal phone no-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/mobile" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextPersonalPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/personalPhone"
                    android:inputType="number"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--present res phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/mobile" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextPresentResPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/presentResPhome"
                    android:inputType="number"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--permanent res phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/mobile" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextPermanentResPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/permanentResPhone"
                    android:inputType="number"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Office phone no-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginStart="@dimen/text_padding"
                android:src="@drawable/mobile" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/textColor"
                android:background="@drawable/login_edittext_style">
                <EditText
                    android:id="@+id/editTextOfficePhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/officePhone"
                    android:inputType="number"
                    android:textSize="@dimen/textSize18sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#888"
                    android:textColorHint="#888" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--Button home & commit-->
        <LinearLayout
            android:id="@+id/linearlayoutButtonlayout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/margin_bottom_10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/linearlayoutCommit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/commitButtonHeight"
                android:layout_marginTop="@dimen/margin_bottom_10dp"
                android:background="@drawable/commit_button_style"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/marginleftRight4dp"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/save" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/darker_gray" />
                <Button
                    android:id="@+id/buttonCommit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:text="@string/commit" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayoutHome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/commitButtonHeight"
                android:layout_marginTop="@dimen/margin_bottom_10dp"
                android:background="@drawable/next_button_style"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/marginleftRight4dp">
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/home_icon" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/darker_gray" />
                <Button
                    android:id="@+id/buttonHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:text="@string/homeActivity" />
            </LinearLayout>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
