<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/transparent_background"
    tools:context="com.csi.los.Activity.ActivityPersonalInfo">

    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:orientation="vertical"
        android:background="@color/md_blue_900"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/imageViewBackPress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/logo"/>
            <TextView
                android:id="@+id/textViewBankAgentUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="2dp"
                android:text="@string/personalInfoTitle"
                android:layout_toRightOf="@+id/imageViewBackPress"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize17sp" />
        </RelativeLayout>
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:src="@color/md_green_500"
        />

    <TextView
        android:id="@+id/myImageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewProfile"
        android:layout_alignTop="@+id/imageViewProfile"
        android:layout_alignRight="@+id/imageViewProfile"
        android:layout_alignBottom="@+id/imageViewProfile"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="2/4"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scrollbarSize="1.5dp"
        android:layout_below="@+id/imageViewProfile"
        android:scrollbarThumbVertical="@color/buttonColor">

        <!--Bank account label-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/textColor"
                android:layout_gravity="center|left"
                android:background="@drawable/login_edittext_style"
                >
                <EditText
                    android:id="@+id/editTextBankAccountNo"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|left"
                    android:hint="@string/bankAccNo"
                    android:textSize="@dimen/textSize11sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/textColorTitleSmall"
                    android:textColorHint="@color/textColorTitleSmall"
                    android:backgroundTint="@android:color/transparent"
                    android:background="@color/white"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--customer code-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/textColor"
                android:layout_gravity="center|left"
                android:background="@drawable/login_edittext_style"
                >
                <EditText
                    android:id="@+id/editTextCustomerCode"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|left"
                    android:hint="@string/customerCode"
                    android:textSize="@dimen/textSize11sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/textColorTitleSmall"
                    android:textColorHint="@color/textColorTitleSmall"
                    android:backgroundTint="@android:color/transparent"
                    android:background="@color/white"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Full Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/textColor"
                android:layout_gravity="center|left"
                android:background="@drawable/login_edittext_style"
                >
                <EditText
                    android:id="@+id/editTextFullName"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|left"
                    android:hint="@string/fullName"
                    android:textSize="@dimen/textSize11sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/textColorTitleSmall"
                    android:textColorHint="@color/textColorTitleSmall"
                    android:backgroundTint="@android:color/transparent"
                    android:background="@color/white"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_edittext_style"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColorHint="@color/textColor"
                android:layout_gravity="center|left"
                android:background="@drawable/login_edittext_style"
                >
                <EditText
                    android:id="@+id/editTextDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|left"
                    android:hint="@string/dateOfBirth"
                    android:textSize="@dimen/textSize11sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:editable="false"
                    android:textColor="@color/textColorTitleSmall"
                    android:textColorHint="@color/textColorTitleSmall"
                    android:backgroundTint="@android:color/transparent"
                    android:background="@color/white"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--Gender-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left|start"
                android:text="@string/gender"
                android:textColor="@color/buttonColor"
                android:layout_marginBottom="2dp"
                android:paddingLeft="10dp"
                android:textSize="@dimen/textSize11sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_below="@+id/textViewGender"
                android:background="@drawable/login_edittext_style">
                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/buttonColor"
                    android:fitsSystemWindows="true"
                    android:gravity="center"
                    android:paddingBottom="0dp"
                    android:paddingLeft="0dp"
                    android:popupBackground="@drawable/spinner_popup_style"
                    android:scrollbarSize="4dp"
                    android:spinnerMode="dialog"
                    />
            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>